--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -7,8 +7,8 @@
 .navlinks {
   display: flex;
   flex-flow: column nowrap;
-  height: 100vh;
-  width: 100vw;
+  height: 90vh;
+  width: 100%;
   z-index: 3;
   align-items: center;
   background-color: #572ee5;
@@ -47,6 +47,6 @@
     height: 0;
   }
   to {
-    height: 100vh;
+    height: 90vh;
   }
 }
