--- a/styles/partials/_search-bar.scss
+++ b/styles/partials/_search-bar.scss
@@ -7,11 +7,13 @@
     border: 1px solid #572ee5;
     border-radius: 27px;
     width: 80%;
-    padding: 1.2% 14.7%;
+    padding: 1.2% 14.7% 1.2% 2%;
+    outline: none;
   }
   #search-icon {
+    height: 60%;
     position: absolute;
     right: 15%;
-    top: 15%;
+    top: 20%;
   }
 }
