--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,3 +1,4 @@
-%title_font {
-  font-family: "Montserrat", sans-serif;
-}
+$title_font: "Montserrat", sans-serif;
+$main_color: #572ee5;
+$background-color: #f3f5f8;
+$text_font: "Roboto", sans-serif;
