--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,8 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  height: 100vh;
-  width: 100vw;
+  height: 90vh;
+  width: 100%;
   z-index: 3;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -73,7 +73,7 @@
     height: 0;
   }
   to {
-    height: 100vh;
+    height: 90vh;
   }
 }
 
@@ -82,7 +82,7 @@
     height: 0;
   }
   to {
-    height: 100vh;
+    height: 90vh;
   }
 }
 
@@ -126,12 +126,103 @@
   border: 1px solid #572ee5;
   border-radius: 27px;
   width: 80%;
-  padding: 1.2% 14.7%;
+  padding: 1.2% 14.7% 1.2% 2%;
+  outline: none;
 }
 
 .search-bar #search-icon {
+  height: 60%;
   position: absolute;
   right: 15%;
-  top: 15%;
+  top: 20%;
+}
+
+.trending-searchs__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  color: #572ee5;
+  line-height: 1.5625rem;
+  text-align: center;
+  margin: 2.6%;
+}
+
+.trending-searchs__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 0.875rem;
+  color: #572ee5;
+  text-align: center;
+  margin: 0.2% 20% 3.7%;
+}
+
+.trending-gifs {
+  background-color: #f3f5f8;
+  margin-top: 3.7%;
+  padding: 3.8% 0 6.8%;
+}
+
+.trending-gifs__title {
+  font-family: "Montserrat", sans-serif;
+  color: #572ee5;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.875rem;
+  text-align: center;
+  padding: 3.8% 0 0.6%;
+}
+
+.trending-gifs__text {
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  text-align: center;
+  line-height: 1.4375rem;
+  margin: 0.6% 5.6% 2.7%;
+}
+
+.trending-gifs__text__blockText {
+  display: block;
+}
+
+.trending-gifs .carrusel {
+  width: 64.8%;
+  height: 187px;
+  background-color: lightgrey;
+  margin: 15px;
+  text-align: center;
+  line-height: 187px;
+}
+
+.social {
+  margin-top: 6.8%;
+  padding: 3.9% 20.3% 1.9%;
+  border-bottom: solid 5px #572ee5;
+}
+
+.social__title {
+  font-family: "Roboto", sans-serif;
+  font-size: 0.9375rem;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.social__icon-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 3.8%;
+}
+
+.social__text {
+  font-family: "Roboto", sans-serif;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.social .social-icon {
+  margin: 5.1%;
+  color: lightgrey;
 }
 /*# sourceMappingURL=styles.css.map */
