--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,3 +3,6 @@
 @import "partials/navbar";
 @import "partials/hero";
 @import "partials/search-bar";
+@import "partials/trending-searchs";
+@import "partials/trending-gifs";
+@import "partials/social";
