--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   margin: 15px 11.7% 0 11.7%;
+  padding-top: 90px;
   &__text {
     text-align: center;
     font-family: "Montserrat", sans-serif;
