--- a/styles/partials/_social.scss
+++ b/styles/partials/_social.scss
@@ -19,6 +19,7 @@
     font-family: $text_font;
     font-size: 0.875rem;
     line-height: 1.25rem;
+    text-align: center;
   }
   .social-icon {
     margin: 5.1%;
