--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,3 +6,6 @@
 @import "partials/trending-searchs";
 @import "partials/trending-gifs";
 @import "partials/social";
+@import "partials/searchs";
+@import "partials/favourites";
+@import "partials/mygifos";
