--- a/styles/partials/_trending-gifs.scss
+++ b/styles/partials/_trending-gifs.scss
@@ -22,7 +22,7 @@
       display: block;
     }
   }
-  .carrusel {
+  .carousel {
     width: 64.8%;
     height: 187px;
     background-color: lightgrey;
