--- a/styles/partials/_search-bar.scss
+++ b/styles/partials/_search-bar.scss
@@ -1,19 +1,43 @@
 .search-bar {
-  display: flex;
-  justify-content: center;
-  margin-top: 0;
-  position: relative;
-  #search-bar {
-    border: 1px solid #572ee5;
-    border-radius: 27px;
-    width: 80%;
-    padding: 1.2% 14.7% 1.2% 2%;
-    outline: none;
+  margin: 0 auto;
+  width: 80%;
+  border: 1px solid #572ee5;
+  border-radius: 27px;
+  &__input {
+    padding: 1.2% 2% 1.2% 2%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0;
+    #search-input {
+      padding: 0 3%;
+      width: 90%;
+      border: none;
+      outline: none;
+    }
+    #search-icon-active {
+      height: 16px;
+    }
   }
-  #search-icon {
-    height: 60%;
-    position: absolute;
-    right: 15%;
-    top: 20%;
+  &__suggestion {
+    margin: 0 auto;
+    padding: 0 5%;
+    &__list {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      li {
+        font-family: $text_font;
+        font-size: 0.875rem;
+        color: gray;
+        #searchList-icon {
+          height: 12px;
+          fill: grey;
+        }
+      }
+    }
   }
+}
+.searchActive {
+  @extend .search-bar;
+  border-radius: 10px;
 }
