--- a/styles/partials/_search-bar.scss
+++ b/styles/partials/_search-bar.scss
@@ -9,10 +9,14 @@
     justify-content: space-between;
     margin-top: 0;
     #search-input {
-      padding: 0 3%;
-      width: 90%;
+      padding: 0 2%;
+      width: 100%;
       border: none;
       outline: none;
+    }
+    #search-icon,
+    #close-search-icon {
+      cursor: pointer;
     }
     #search-icon-active {
       height: 16px;
@@ -21,17 +25,22 @@
   &__suggestion {
     margin: 0 auto;
     padding: 0 5%;
+    &__border {
+      width: 100%;
+      border-top: 1px solid gray;
+      margin-bottom: 2px;
+    }
     &__list {
       list-style-type: none;
-      margin: 0;
+      margin: 4px 0;
       padding: 0;
       li {
         font-family: $text_font;
         font-size: 0.875rem;
         color: gray;
-        #searchList-icon {
+        .searchList-icon {
+          margin: 0 2px;
           height: 12px;
-          fill: grey;
         }
       }
     }
