Agrego gif maximizado

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,4 +9,4 @@
 @import "partials/searchs";
 @import "partials/favourites";
 @import "partials/mygifos";
-@import "partials/desktop";
+@import "partials/maxGifs";
