--- a/styles/partials/_trending-gifs.scss
+++ b/styles/partials/_trending-gifs.scss
@@ -28,11 +28,11 @@
     justify-content: center;
     align-items: center;
     width: 80vw;
-    height: auto;
     margin: 0 auto;
     #track {
       display: flex;
       width: 100%;
+      height: 100%;
       justify-content: space-between;
       overflow: scroll;
       scroll-behavior: smooth;
@@ -60,11 +60,20 @@
 }
 .gifCard {
   position: relative;
-  margin: 5px;
+  margin: 0 5px;
+  height: 100%;
+  &__gif {
+    width: 12.5rem;
+    height: 9.375rem;
+    @media screen and (min-width: 992px) {
+      width: 21.875rem;
+      height: 18.75rem;
+    }
+  }
   .gifHover {
     position: absolute;
     width: 100%;
-    height: 98%;
+    height: 99%;
     top: 0px;
     z-index: 9;
     background-color: $main-color;
@@ -80,6 +89,9 @@
         opacity: 0.7;
         border-radius: 6px;
         cursor: pointer;
+        &:hover {
+          opacity: 1;
+        }
       }
     }
     &__textBox {
