--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,10 +27,6 @@
   display: none;
 }
 
-.invisible {
-  visibility: hidden;
-}
-
 /* variables */
 /* btn style */
 .searchs__btn, .favourites__btn, .miGifos__btn {
@@ -319,7 +315,6 @@
       -ms-flex-align: center;
           align-items: center;
   width: 80vw;
-  height: auto;
   margin: 0 auto;
 }
 
@@ -328,6 +323,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  height: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -366,13 +362,26 @@
 
 .gifCard {
   position: relative;
-  margin: 5px;
+  margin: 0 5px;
+  height: 100%;
+}
+
+.gifCard__gif {
+  width: 12.5rem;
+  height: 9.375rem;
+}
+
+@media screen and (min-width: 992px) {
+  .gifCard__gif {
+    width: 21.875rem;
+    height: 18.75rem;
+  }
 }
 
 .gifCard .gifHover {
   position: absolute;
   width: 100%;
-  height: 98%;
+  height: 99%;
   top: 0px;
   z-index: 9;
   background-color: #572ee5;
@@ -396,6 +405,10 @@
   opacity: 0.7;
   border-radius: 6px;
   cursor: pointer;
+}
+
+.gifCard .gifHover__icons .gif-icons:hover {
+  opacity: 1;
 }
 
 .gifCard .gifHover__textBox {
@@ -643,10 +656,6 @@
   display: none;
 }
 
-.invisible {
-  visibility: hidden;
-}
-
 /* variables */
 /* btn style */
 .searchs__btn, .favourites__btn, .miGifos__btn {
@@ -662,5 +671,82 @@
   border: 1px solid #572ee5;
   border-radius: 25px;
   outline: none;
+}
+
+.maximized-container {
+  background-color: rgba(255, 255, 255, 0.9);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  z-index: 3000;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.maximizedGifs {
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.maximizedGifs__gif {
+  display: inline-block;
+}
+
+.maximizedGifs__gif .maxGif {
+  display: block;
+  margin: 0 auto;
+  max-width: 80%;
+}
+
+.maximizedGifs__close {
+  margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  cursor: pointer;
+}
+
+.maximizedGifs__icons {
+  padding-top: 0.625rem;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+}
+
+.maximizedGifs__icons div img {
+  margin: 0 5px;
+}
+
+#maxGif-title,
+#maxGif-user {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
 }
 /*# sourceMappingURL=styles.css.map */
