--- a/styles/partials/_maxGifs.scss
+++ b/styles/partials/_maxGifs.scss
@@ -4,7 +4,6 @@
 .maximized-container {
   background-color: rgba(255, 255, 255, 0.9);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   position: fixed;
   z-index: 3000;
@@ -14,20 +13,22 @@
   left: 0;
 }
 .maximizedGifs {
-  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   &__gif {
-    display: inline-block;
+    margin: 0 auto;
     .maxGif {
       display: block;
       margin: 0 auto;
       max-width: 80%;
+      @media screen and (min-width: 992px) {
+        max-width: 100%;
+      }
     }
   }
   &__close {
-    margin: 10px;
+    padding: 0.625rem;
     display: flex;
     justify-content: flex-end;
     cursor: pointer;
@@ -38,10 +39,17 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    div {
+    @media screen and (min-width: 992px) {
+      width: 100%;
+    }
+    .maxGif-icons {
+      max-width: 20%;
       img {
-        margin: 0 5px;
+        padding: 0 5px;
       }
+    }
+    .maxGif-data {
+      max-width: 80%;
     }
   }
 }
