Agrego funcionalidad de agregar a favoritos en localStorage

--- a/styles/partials/_trending-gifs.scss
+++ b/styles/partials/_trending-gifs.scss
@@ -51,6 +51,9 @@
 			@media screen and (min-width: 992px) {
 				display: flex;
 			}
+			&:hover {
+				background-color: $main_color;
+			}
 			cursor: pointer;
 			.btnImg-carousel {
 				margin: 0 auto;
