--- a/styles/partials/_searchs.scss
+++ b/styles/partials/_searchs.scss
@@ -1,32 +1,95 @@
 @import "variables";
 
 .searchs {
-  margin-top: 2.5rem;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  &__top-border {
-    border: 1px solid $borders_color;
-    background-color: $borders_color;
-    opacity: 0.5;
-    width: 40%;
-    margin: 1.8% auto;
-  }
-  &__title {
-    padding: 1.8% 0 1.6%;
-    font-family: $title_font;
-    color: $main_color;
-    font-size: 1.5625rem;
-  }
-  &__gifs {
-    padding: 1.6%;
-    margin: 0 5.6% 3.3%;
-    width: 9.75rem;
-    height: 7.5rem;
-    background-color: lightgrey;
-    text-align: center;
-  }
-  &__btn {
-    @extend %btn;
-  }
+	margin-top: 2.5rem;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	&__top-border {
+		border: 1px solid $borders_color;
+		background-color: $borders_color;
+		opacity: 0.5;
+		width: 40%;
+		margin: 1.8% auto;
+	}
+	&__title {
+		padding: 1.8% 0 1.6%;
+		font-family: $title_font;
+		color: $main_color;
+		font-size: 1.5625rem;
+	}
+	&__gallery {
+		padding: 1.6%;
+		margin: 0 5.6% 3.3%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+	&__btn {
+		@extend %btn;
+	}
+}
+
+.gifHover {
+	position: absolute;
+	width: 100%;
+	height: 99%;
+	top: 0px;
+	z-index: 9;
+	background-color: $main-color;
+	opacity: 0.7;
+	&__icons {
+		display: flex;
+		justify-content: flex-end;
+		.gif-icons {
+			margin: 2px;
+			padding: 5px;
+			height: auto;
+			background-color: white;
+			opacity: 0.7;
+			border-radius: 6px;
+			cursor: pointer;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+	&__textBox {
+		position: absolute;
+		bottom: 0px;
+		margin-bottom: 10%;
+		&__text {
+			padding-left: 10%;
+			margin: 2px 0;
+			color: white;
+			font-family: $text_font;
+			font-weight: bold;
+			font-size: 0.875rem;
+		}
+	}
+}
+
+.gifsContainer {
+	position: relative;
+	margin: 0 5px;
+	height: 100%;
+	.gif {
+		width: 12.5rem;
+		height: 9.375rem;
+		@media screen and (min-width: 992px) {
+			width: 21.875rem;
+			height: 18.75rem;
+		}
+	}
+}
+
+.searchs__error {
+	text-align: center;
+	&__text {
+		margin-top: 0.9375rem;
+		font-family: $text_font;
+		font-size: 1.375rem;
+		color: $secundary_color;
+	}
 }
