--- a/styles/partials/_favourites.scss
+++ b/styles/partials/_favourites.scss
@@ -1,24 +1,87 @@
 @import "variables";
 
 .favourites {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  &__title {
-    padding: 0.4%;
-    font-family: $title_font;
-    color: $main_color;
-    font-size: 1.25rem;
-  }
-  &__gifs {
-    padding: 1.6%;
-    margin: 2.4%;
-    width: 9.75rem;
-    height: 7.5rem;
-    background-color: lightgrey;
-    text-align: center;
-  }
-  &__btn {
-    @extend %btn;
-  }
+	margin-top: 7.5rem;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	&__title {
+		padding: 0.4%;
+		font-family: $title_font;
+		color: $main_color;
+		font-size: 1.25rem;
+	}
+	&__empty {
+		margin-top: 1.25rem;
+		padding: 0.625rem;
+		text-align: center;
+		&__text {
+			margin-top: 0.9375rem;
+			font-family: $text_font;
+			font-size: 1.375rem;
+			color: $secundary_color;
+			span {
+				display: block;
+			}
+			&__icon {
+				margin: 0 auto;
+			}
+		}
+	}
+	&__btn {
+		@extend %btn;
+	}
+}
+
+.favGifContainer {
+	position: relative;
+	margin: 0 5px;
+	height: 100%;
+	&__gif {
+		width: 12.5rem;
+		height: 9.375rem;
+		@media screen and (min-width: 992px) {
+			width: 21.875rem;
+			height: 18.75rem;
+		}
+	}
+}
+
+.favHover {
+	position: absolute;
+	width: 100%;
+	height: 99%;
+	top: 0px;
+	z-index: 9;
+	background-color: $main-color;
+	opacity: 0.7;
+	&__icons {
+		display: flex;
+		justify-content: flex-end;
+		.gif-icons {
+			margin: 2px;
+			padding: 5px;
+			height: auto;
+			background-color: white;
+			opacity: 0.7;
+			border-radius: 6px;
+			cursor: pointer;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+	&__textBox {
+		position: absolute;
+		bottom: 0px;
+		margin-bottom: 10%;
+		&__text {
+			padding-left: 10%;
+			margin: 2px 0;
+			color: white;
+			font-family: $text_font;
+			font-weight: bold;
+			font-size: 0.875rem;
+		}
+	}
 }
