--- a/styles/styles.css
+++ b/styles/styles.css
@@ -717,6 +717,10 @@
   color: #50e3c2;
 }
 
+.searchs__error__icon {
+  margin: 0 auto;
+}
+
 /* variables */
 /* btn style */
 .searchs__btn, .favourites__btn, .miGifos__btn {
@@ -735,6 +739,7 @@
 }
 
 .favourites {
+  margin-top: 7.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -754,13 +759,91 @@
   font-size: 1.25rem;
 }
 
-.favourites__gifs {
-  padding: 1.6%;
-  margin: 2.4%;
-  width: 9.75rem;
-  height: 7.5rem;
-  background-color: lightgrey;
+.favourites__empty {
+  margin-top: 1.25rem;
+  padding: 0.625rem;
   text-align: center;
+}
+
+.favourites__empty__text {
+  margin-top: 0.9375rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.375rem;
+  color: #50e3c2;
+}
+
+.favourites__empty__text span {
+  display: block;
+}
+
+.favourites__empty__text__icon {
+  margin: 0 auto;
+}
+
+.favGifContainer {
+  position: relative;
+  margin: 0 5px;
+  height: 100%;
+}
+
+.favGifContainer__gif {
+  width: 12.5rem;
+  height: 9.375rem;
+}
+
+@media screen and (min-width: 992px) {
+  .favGifContainer__gif {
+    width: 21.875rem;
+    height: 18.75rem;
+  }
+}
+
+.favHover {
+  position: absolute;
+  width: 100%;
+  height: 99%;
+  top: 0px;
+  z-index: 9;
+  background-color: #572ee5;
+  opacity: 0.7;
+}
+
+.favHover__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.favHover__icons .gif-icons {
+  margin: 2px;
+  padding: 5px;
+  height: auto;
+  background-color: white;
+  opacity: 0.7;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.favHover__icons .gif-icons:hover {
+  opacity: 1;
+}
+
+.favHover__textBox {
+  position: absolute;
+  bottom: 0px;
+  margin-bottom: 10%;
+}
+
+.favHover__textBox__text {
+  padding-left: 10%;
+  margin: 2px 0;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 0.875rem;
 }
 
 /* variables */
