--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,10 @@
   padding: 10px 20px;
 }
 
+.navbar__icons #logo-mobile {
+  cursor: pointer;
+}
+
 .navbar__icons .navbarSearch-bar {
   padding: 0.125rem;
   width: 40%;
@@ -196,6 +200,7 @@
   font-size: 1rem;
   font-weight: 600;
   color: #572ee5;
+  cursor: pointer;
 }
 
 .navbar-desktop #createGif-btn {
@@ -204,6 +209,7 @@
   margin-right: 0.3125rem;
   border: 1px solid #572ee5;
   border-radius: 50px;
+  cursor: pointer;
 }
 
 .desktopnav-hidden {
@@ -640,6 +646,11 @@
           align-items: center;
 }
 
+.searchs__btn:hover {
+  background-color: #572ee5;
+  color: white;
+}
+
 .gifHover {
   position: absolute;
   width: 100%;
@@ -690,7 +701,7 @@
 
 .gifsContainer {
   position: relative;
-  margin: 0 5px;
+  margin: 0.3125rem 0;
   height: 100%;
 }
 
@@ -778,6 +789,30 @@
 
 .favourites__empty__text__icon {
   margin: 0 auto;
+}
+
+.favourites__btn {
+  cursor: pointer;
+}
+
+.favourites__btn:hover {
+  background-color: #572ee5;
+  color: white;
+}
+
+.favourites__gifs {
+  padding: 1.6%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .favGifContainer {
