--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -14,6 +14,9 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 20px;
+	#logo-mobile {
+		cursor: pointer;
+	}
 	.navbarSearch-bar {
 		padding: 0.125rem;
 		width: 40%;
@@ -102,6 +105,7 @@
 		font-size: 1rem;
 		font-weight: 600;
 		color: $main_color;
+		cursor: pointer;
 	}
 	#createGif-btn {
 		padding: 0.9375rem;
@@ -109,6 +113,7 @@
 		margin-right: 0.3125rem;
 		border: 1px solid $main_color;
 		border-radius: 50px;
+		cursor: pointer;
 	}
 }
 
