--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -21,3 +21,9 @@ $secundary_color: #50e3c2;
 	border-radius: 25px;
 	outline: none;
 }
+
+$purpleTransparency: rgba(87, 46, 229, 0.6);
+$lightGray: #9cafc3;
+
+$desktop2: 1280px;
+$genericLaptop: 1530px;
