--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1084,4 +1084,340 @@
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
 }
+
+/* variables */
+/* btn style */
+.searchs__btn, .favourites__btn, .miGifos__btn {
+  margin: 3.4%;
+  padding: 0.8% 3.7%;
+  width: 25%;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.8125rem;
+  font-weight: bold;
+  color: #572ee5;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #572ee5;
+  border-radius: 25px;
+  outline: none;
+}
+
+.crearGif {
+  padding-top: 12%;
+  position: relative;
+}
+
+@media screen and (min-width: 1280px) {
+  .crearGif {
+    padding-top: 10%;
+  }
+}
+
+@media screen and (min-width: 1530px) {
+  .crearGif {
+    padding-top: 9%;
+  }
+}
+
+.crearGif__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.crearGif__camara {
+  max-width: 25%;
+  position: relative;
+}
+
+.crearGif__camara .path {
+  position: relative;
+  top: -1rem;
+}
+
+.crearGif__celluloidFilm {
+  max-width: 25%;
+  height: 20rem;
+  padding-top: 18rem;
+  padding-left: 1.5rem;
+}
+
+.crearGif__recordingZone {
+  padding: 2rem;
+  width: 50%;
+  height: 20rem;
+  border: 1px solid #572ee5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  /* body.darkMode & {
+			border: 1px solid #fff;
+		} */
+}
+
+.crearGif__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5625rem;
+  color: #572ee5;
+}
+
+.crearGif__title .aqua-text {
+  color: #50e3c2;
+}
+
+.crearGif__text {
+  padding-top: 10px;
+  color: #000;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  /* body.darkMode & {
+			color: #fff;
+		} */
+}
+
+.crearGif .recording_video {
+  min-width: 80%;
+  min-height: 20rem;
+  max-width: 80%;
+  max-height: 20rem;
+  z-index: 3000;
+}
+
+.crearGif .recorded_video {
+  width: 100%;
+  z-index: 3000;
+}
+
+.crearGif .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(87, 46, 229, 0.6);
+  color: #fff;
+  z-index: 90;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.crearGif .overlay__status-icon {
+  margin: 0.8rem;
+}
+
+.crearGif .overlaystatus-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.crearGif .pagination {
+  margin: 0 auto;
+  width: 75%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  justify-self: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.crearGif .pagination .step {
+  width: 2rem;
+  height: 2rem;
+  padding-top: 0.2em;
+  margin: 1.5rem 0.5rem 1.5rem 0.5rem;
+  border: 1px solid #572ee5;
+  border-radius: 50%;
+  font-size: 1.2em;
+}
+
+body.darkMode .crearGif .pagination .step {
+  border: 1px solid #fff;
+}
+
+.crearGif .pagination .step-active {
+  background-color: #572ee5;
+  color: #fff;
+}
+
+.crearGif #repeatShot {
+  color: #572ee5;
+  text-decoration: none;
+}
+
+.crearGif #repeatShot:hover {
+  border-bottom: 2px solid #50e3c2;
+}
+
+.crearGif #repeatShot:active {
+  color: #9cafc3;
+  border-bottom: hidden;
+}
+
+.crearGif .timer {
+  width: 25%;
+  text-align: right;
+  position: absolute;
+  top: 79%;
+  right: 24%;
+}
+
+.crearGif .timer .timer__text {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.crearGif .overlay__buttons {
+  width: 6.8rem;
+  padding: 2%;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 0;
+  right: 0;
+}
+
+.crearGif .overlay__buttons .btns {
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+
+.crearGif .overlay__buttons .downloadOverlay {
+  background-color: white;
+  opacity: 0.7;
+  padding: 0.3125rem;
+  border-radius: 0.375rem;
+}
+
+.crearGif .overlay__buttons .downloadOverlay:hover {
+  opacity: 1;
+}
+
+.crearGif .overlay__buttons .linkOverlay {
+  background-color: white;
+  opacity: 0.7;
+  padding: 0.3125rem;
+  border-radius: 0.375rem;
+}
+
+.crearGif .overlay__buttons .linkOverlay:hover {
+  opacity: 1;
+}
+
+.crearGif .corner {
+  width: 1.7rem;
+  height: 1.7rem;
+  position: absolute;
+}
+
+.crearGif .top--left {
+  border-top: 1px solid #50e3c2;
+  border-left: 1px solid #50e3c2;
+  top: 1.25rem;
+  left: 1.25rem;
+}
+
+.crearGif .top--right {
+  border-top: 1px solid #50e3c2;
+  border-right: 1px solid #50e3c2;
+  top: 1.25rem;
+  right: 1.25rem;
+}
+
+.crearGif .bottom--right {
+  border-bottom: 1px solid #50e3c2;
+  border-right: 1px solid #50e3c2;
+  bottom: 1.25rem;
+  right: 1.25rem;
+}
+
+.crearGif .bottom--left {
+  border-bottom: 1px solid #50e3c2;
+  border-left: 1px solid #50e3c2;
+  bottom: 1.25rem;
+  left: 1.25rem;
+}
+
+.crearGif .border {
+  width: 58%;
+  margin: 0 auto;
+  border: 2px solid #572ee5;
+}
+
+.button__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.button {
+  margin-top: 1.25rem;
+  padding: 1.25rem;
+  border: 1px solid #572ee5;
+  border-radius: 2.5rem;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: #572ee5;
+  font-size: 0.8125rem;
+  cursor: pointer;
+}
 /*# sourceMappingURL=styles.css.map */
