--- a/styles/partials/_mygifos.scss
+++ b/styles/partials/_mygifos.scss
@@ -1,26 +1,91 @@
 @import "variables";
 
 .miGifos {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  &__title {
-    margin-top: 0.4%;
-    font-family: $title_font;
-    color: $main_color;
-    font-weight: bold;
-    font-size: 1.25rem;
-    line-height: 1.875rem;
-  }
-  &__gifs {
-    padding: 1.6%;
-    margin: 2.4%;
-    width: 9.75rem;
-    height: 7.5rem;
-    background-color: lightgrey;
-    text-align: center;
-  }
-  &__btn {
-    @extend %btn;
-  }
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	margin-top: 6.25rem;
+	&__title {
+		margin-top: 0.4%;
+		font-family: $title_font;
+		color: $main_color;
+		font-weight: bold;
+		font-size: 1.25rem;
+		line-height: 1.875rem;
+	}
+
+	&__empty {
+		display: flex;
+		flex-flow: column nowrap;
+		margin-top: 2.5rem;
+		h3 {
+			margin: 0.625rem;
+			font-family: $title_font;
+			font-size: 1.375rem;
+			font-weight: 600;
+			color: $secundary_color;
+		}
+	}
+	&__btn {
+		@extend %btn;
+	}
+}
+.miGifos__gifs__gallery {
+	padding: 1.6%;
+	margin: 0 5.6% 3.3%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.gifoHover {
+	position: absolute;
+	width: 100%;
+	height: 99%;
+	top: 0px;
+	z-index: 9;
+	background-color: $main-color;
+	opacity: 0.7;
+	&__icons {
+		display: flex;
+		justify-content: flex-end;
+		.gif-icons {
+			margin: 2px;
+			padding: 5px;
+			height: auto;
+			background-color: white;
+			opacity: 0.7;
+			border-radius: 6px;
+			cursor: pointer;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+	&__textBox {
+		position: absolute;
+		bottom: 0px;
+		margin-bottom: 10%;
+		&__text {
+			padding-left: 10%;
+			margin: 2px 0;
+			color: white;
+			font-family: $text_font;
+			font-weight: bold;
+			font-size: 0.875rem;
+		}
+	}
+}
+.gif__container {
+	position: relative;
+	margin: 0.3125rem 0;
+	height: 100%;
+	.gif {
+		width: 12.5rem;
+		height: 9.375rem;
+		@media screen and (min-width: 992px) {
+			width: 21.875rem;
+			height: 18.75rem;
+		}
+	}
 }
