Agrego estilos hover de botones

--- a/styles/partials/_createGifos.scss
+++ b/styles/partials/_createGifos.scss
@@ -254,4 +254,8 @@
 	color: $main_color;
 	font-size: 0.8125rem;
 	cursor: pointer;
+	&:hover {
+		background-color: $main_color;
+		color: white;
+	}
 }
