--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,6 +203,15 @@
   cursor: pointer;
 }
 
+.navbar-desktop .navlinks-desktop:hover {
+  border-bottom: 2px solid #50e3c2;
+}
+
+.navbar-desktop .navlinks-desktop:active {
+  color: grey;
+  border: none;
+}
+
 .navbar-desktop #createGif-btn {
   padding: 0.9375rem;
   margin-left: 0.5rem;
@@ -210,6 +219,15 @@
   border: 1px solid #572ee5;
   border-radius: 50px;
   cursor: pointer;
+}
+
+.navbar-desktop #createGif-btn:hover {
+  background-color: #572ee5;
+}
+
+.navbar-desktop #createGif-btn:active {
+  background-color: #9cafc3;
+  border: none;
 }
 
 .desktopnav-hidden {
@@ -1512,5 +1530,10 @@ body.darkMode .crearGif .pagination .step {
   color: #572ee5;
   font-size: 0.8125rem;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #572ee5;
+  color: white;
 }
 /*# sourceMappingURL=styles.css.map */
