--- a/styles/partials/_searchs.scss
+++ b/styles/partials/_searchs.scss
@@ -35,45 +35,6 @@
 	}
 }
 
-.gifHover {
-	position: absolute;
-	width: 100%;
-	height: 99%;
-	top: 0px;
-	z-index: 9;
-	background-color: $main-color;
-	opacity: 0.7;
-	&__icons {
-		display: flex;
-		justify-content: flex-end;
-		.gif-icons {
-			margin: 2px;
-			padding: 5px;
-			height: auto;
-			background-color: white;
-			opacity: 0.7;
-			border-radius: 6px;
-			cursor: pointer;
-			&:hover {
-				opacity: 1;
-			}
-		}
-	}
-	&__textBox {
-		position: absolute;
-		bottom: 0px;
-		margin-bottom: 10%;
-		&__text {
-			padding-left: 10%;
-			margin: 2px 0;
-			color: white;
-			font-family: $text_font;
-			font-weight: bold;
-			font-size: 0.875rem;
-		}
-	}
-}
-
 .gifsContainer {
 	position: relative;
 	margin: 0.3125rem 0;
@@ -87,7 +48,51 @@
 		}
 	}
 }
-
+.gifHover {
+	display: none;
+	@media screen and (min-width: 992px) {
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 99%;
+		top: 0px;
+		z-index: 9;
+		background-color: $main-color;
+		opacity: 0;
+		&:hover {
+			opacity: 0.7;
+		}
+	}
+}
+.gifHover__icons {
+	display: flex;
+	justify-content: flex-end;
+}
+.gif-icons {
+	margin: 2px;
+	padding: 5px;
+	height: auto;
+	background-color: white;
+	opacity: 0.7;
+	border-radius: 6px;
+	cursor: pointer;
+	&:hover {
+		opacity: 1;
+	}
+}
+.gifHover__textBox {
+	position: absolute;
+	bottom: 0px;
+	margin-bottom: 10%;
+	&__text {
+		padding-left: 10%;
+		margin: 2px 0;
+		color: white;
+		font-family: $text_font;
+		font-weight: bold;
+		font-size: 0.875rem;
+	}
+}
 .searchs__error {
 	text-align: center;
 	&__text {
