--- a/styles/styles.css
+++ b/styles/styles.css
@@ -669,54 +669,6 @@
   color: white;
 }
 
-.gifHover {
-  position: absolute;
-  width: 100%;
-  height: 99%;
-  top: 0px;
-  z-index: 9;
-  background-color: #572ee5;
-  opacity: 0.7;
-}
-
-.gifHover__icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.gifHover__icons .gif-icons {
-  margin: 2px;
-  padding: 5px;
-  height: auto;
-  background-color: white;
-  opacity: 0.7;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.gifHover__icons .gif-icons:hover {
-  opacity: 1;
-}
-
-.gifHover__textBox {
-  position: absolute;
-  bottom: 0px;
-  margin-bottom: 10%;
-}
-
-.gifHover__textBox__text {
-  padding-left: 10%;
-  margin: 2px 0;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
-  font-size: 0.875rem;
-}
-
 .gifsContainer {
   position: relative;
   margin: 0.3125rem 0;
@@ -733,6 +685,64 @@
     width: 21.875rem;
     height: 18.75rem;
   }
+}
+
+.gifHover {
+  display: none;
+}
+
+@media screen and (min-width: 992px) {
+  .gifHover {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 99%;
+    top: 0px;
+    z-index: 9;
+    background-color: #572ee5;
+    opacity: 0;
+  }
+  .gifHover:hover {
+    opacity: 0.7;
+  }
+}
+
+.gifHover__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.gif-icons {
+  margin: 2px;
+  padding: 5px;
+  height: auto;
+  background-color: white;
+  opacity: 0.7;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.gif-icons:hover {
+  opacity: 1;
+}
+
+.gifHover__textBox {
+  position: absolute;
+  bottom: 0px;
+  margin-bottom: 10%;
+}
+
+.gifHover__textBox__text {
+  padding-left: 10%;
+  margin: 2px 0;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 0.875rem;
 }
 
 .searchs__error {
