--- a/styles/partials/_favourites.scss
+++ b/styles/partials/_favourites.scss
@@ -44,11 +44,12 @@
 	justify-content: space-evenly;
 	align-items: center;
 }
+
 .favGifContainer {
 	position: relative;
-	margin: 0 5px;
+	margin: 0.3125rem 0;
 	height: 100%;
-	&__gif {
+	.gif {
 		width: 12.5rem;
 		height: 9.375rem;
 		@media screen and (min-width: 992px) {
@@ -57,42 +58,48 @@
 		}
 	}
 }
-
 .favHover {
-	position: absolute;
-	width: 100%;
-	height: 99%;
-	top: 0px;
-	z-index: 9;
-	background-color: $main-color;
-	opacity: 0.7;
-	&__icons {
-		display: flex;
-		justify-content: flex-end;
-		.gif-icons {
-			margin: 2px;
-			padding: 5px;
-			height: auto;
-			background-color: white;
+	display: none;
+	@media screen and (min-width: 992px) {
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 99%;
+		top: 0px;
+		z-index: 9;
+		background-color: $main-color;
+		opacity: 0;
+		&:hover {
 			opacity: 0.7;
-			border-radius: 6px;
-			cursor: pointer;
-			&:hover {
-				opacity: 1;
-			}
 		}
 	}
-	&__textBox {
-		position: absolute;
-		bottom: 0px;
-		margin-bottom: 10%;
-		&__text {
-			padding-left: 10%;
-			margin: 2px 0;
-			color: white;
-			font-family: $text_font;
-			font-weight: bold;
-			font-size: 0.875rem;
-		}
+}
+.favHover__icons {
+	display: flex;
+	justify-content: flex-end;
+}
+.gif-icons {
+	margin: 2px;
+	padding: 5px;
+	height: auto;
+	background-color: white;
+	opacity: 0.7;
+	border-radius: 6px;
+	cursor: pointer;
+	&:hover {
+		opacity: 1;
+	}
+}
+.favHover__textBox {
+	position: absolute;
+	bottom: 0px;
+	margin-bottom: 10%;
+	&__text {
+		padding-left: 10%;
+		margin: 2px 0;
+		color: white;
+		font-family: $text_font;
+		font-weight: bold;
+		font-size: 0.875rem;
 	}
 }
