--- a/styles/styles.css
+++ b/styles/styles.css
@@ -845,30 +845,40 @@
 
 .favGifContainer {
   position: relative;
-  margin: 0 5px;
+  margin: 0.3125rem 0;
   height: 100%;
 }
 
-.favGifContainer__gif {
+.favGifContainer .gif {
   width: 12.5rem;
   height: 9.375rem;
 }
 
 @media screen and (min-width: 992px) {
-  .favGifContainer__gif {
+  .favGifContainer .gif {
     width: 21.875rem;
     height: 18.75rem;
   }
 }
 
 .favHover {
-  position: absolute;
-  width: 100%;
-  height: 99%;
-  top: 0px;
-  z-index: 9;
-  background-color: #572ee5;
-  opacity: 0.7;
+  display: none;
+}
+
+@media screen and (min-width: 992px) {
+  .favHover {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 99%;
+    top: 0px;
+    z-index: 9;
+    background-color: #572ee5;
+    opacity: 0;
+  }
+  .favHover:hover {
+    opacity: 0.7;
+  }
 }
 
 .favHover__icons {
@@ -880,7 +890,7 @@
           justify-content: flex-end;
 }
 
-.favHover__icons .gif-icons {
+.gif-icons {
   margin: 2px;
   padding: 5px;
   height: auto;
@@ -890,7 +900,7 @@
   cursor: pointer;
 }
 
-.favHover__icons .gif-icons:hover {
+.gif-icons:hover {
   opacity: 1;
 }
 
