arreglo localstorage favoritos

--- a/styles/partials/_createGifos.scss
+++ b/styles/partials/_createGifos.scss
@@ -48,9 +48,9 @@
 		align-items: center;
 		position: relative;
 
-		/* body.darkMode & {
+		body.darkMode & {
 			border: 1px solid #fff;
-		} */
+		}
 	}
 
 	&__title {
