--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -1,4 +1,10 @@
 /* Navbar styles */
+.header {
+	body.darkMode & {
+		background-color: $backgroundDark;
+		border: none;
+	}
+}
 .navbar {
 	position: fixed;
 	top: 0;
@@ -22,6 +28,9 @@
 		width: 40%;
 		border: 1px solid #572ee5;
 		border-radius: 24px;
+		body.darkMode & {
+			border: 1px solid #fff;
+		}
 		&__input {
 			padding: 1.2% 2% 1.2% 2%;
 			display: flex;
@@ -33,6 +42,10 @@
 				width: 100%;
 				border: none;
 				outline: none;
+				body.darkMode & {
+					color: #9cafc3;
+					background-color: transparent;
+				}
 			}
 			#navbarSearch-icon,
 			#close-navbarSearch-icon {
@@ -60,6 +73,9 @@
 	&__list {
 		list-style: none;
 		margin-top: 2.9%;
+		body.darkMode & {
+			background-color: $backgroundBlack;
+		}
 		&__link {
 			line-height: 3.75rem;
 			position: relative;
@@ -67,6 +83,9 @@
 			font-family: "Montserrat", sans-serif;
 			font-weight: 600;
 			color: #ffffff;
+			body.darkMode & {
+				color: white;
+			}
 			// This creates a short border for each link on the menu
 			.borders-actives {
 				display: block;
