--- a/styles/partials/_searchs.scss
+++ b/styles/partials/_searchs.scss
@@ -28,80 +28,84 @@
 	}
 	&__btn {
 		@extend %btn;
-		&:hover {
-			background-color: $main_color;
-			color: white;
+		body.darkMode & {
+			border: 2px solid #fff;
+			color: #fff;
+			&:hover {
+				background-color: $main_color;
+				color: white;
+			}
 		}
 	}
-}
 
-.gifsContainer {
-	position: relative;
-	margin: 0.3125rem 0;
-	height: 100%;
-	.gif {
-		width: 12.5rem;
-		height: 9.375rem;
+	.gifsContainer {
+		position: relative;
+		margin: 0.3125rem 0;
+		height: 100%;
+		.gif {
+			width: 12.5rem;
+			height: 9.375rem;
+			@media screen and (min-width: 992px) {
+				width: 21.875rem;
+				height: 18.75rem;
+			}
+		}
+	}
+	.gifHover {
+		display: none;
 		@media screen and (min-width: 992px) {
-			width: 21.875rem;
-			height: 18.75rem;
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 99%;
+			top: 0px;
+			z-index: 9;
+			background-color: $main-color;
+			opacity: 0;
+			&:hover {
+				opacity: 0.7;
+			}
 		}
 	}
-}
-.gifHover {
-	display: none;
-	@media screen and (min-width: 992px) {
-		display: block;
-		position: absolute;
-		width: 100%;
-		height: 99%;
-		top: 0px;
-		z-index: 9;
-		background-color: $main-color;
-		opacity: 0;
+	.gifHover__icons {
+		display: flex;
+		justify-content: flex-end;
+	}
+	.gif-icons {
+		margin: 2px;
+		padding: 5px;
+		height: auto;
+		background-color: white;
+		opacity: 0.7;
+		border-radius: 6px;
+		cursor: pointer;
 		&:hover {
-			opacity: 0.7;
+			opacity: 1;
 		}
 	}
-}
-.gifHover__icons {
-	display: flex;
-	justify-content: flex-end;
-}
-.gif-icons {
-	margin: 2px;
-	padding: 5px;
-	height: auto;
-	background-color: white;
-	opacity: 0.7;
-	border-radius: 6px;
-	cursor: pointer;
-	&:hover {
-		opacity: 1;
+	.gifHover__textBox {
+		position: absolute;
+		bottom: 0px;
+		margin-bottom: 10%;
+		&__text {
+			padding-left: 10%;
+			margin: 2px 0;
+			color: white;
+			font-family: $text_font;
+			font-weight: bold;
+			font-size: 0.875rem;
+		}
 	}
-}
-.gifHover__textBox {
-	position: absolute;
-	bottom: 0px;
-	margin-bottom: 10%;
-	&__text {
-		padding-left: 10%;
-		margin: 2px 0;
-		color: white;
-		font-family: $text_font;
-		font-weight: bold;
-		font-size: 0.875rem;
-	}
-}
-.searchs__error {
-	text-align: center;
-	&__text {
-		margin-top: 0.9375rem;
-		font-family: $text_font;
-		font-size: 1.375rem;
-		color: $secundary_color;
-	}
-	&__icon {
-		margin: 0 auto;
+	.searchs__error {
+		text-align: center;
+		&__text {
+			margin-top: 0.9375rem;
+			font-family: $text_font;
+			font-size: 1.375rem;
+			color: $secundary_color;
+		}
+		&__icon {
+			margin: 0 auto;
+		}
 	}
 }
