--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,16 @@
   display: none;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  color: #572ee5;
+}
+
+body.darkMode {
+  background-color: #37383c;
+  color: #fff;
+}
+
 /* variables */
 /* btn style */
 .searchs__btn, .favourites__btn, .miGifos__btn {
@@ -45,6 +55,11 @@
 }
 
 /* Navbar styles */
+body.darkMode .header {
+  background-color: #37383c;
+  border: none;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -83,6 +98,10 @@
   border-radius: 24px;
 }
 
+body.darkMode .navbar__icons .navbarSearch-bar {
+  border: 1px solid #fff;
+}
+
 .navbar__icons .navbarSearch-bar__input {
   padding: 1.2% 2% 1.2% 2%;
   display: -webkit-box;
@@ -100,6 +119,11 @@
   width: 100%;
   border: none;
   outline: none;
+}
+
+body.darkMode .navbar__icons .navbarSearch-bar__input #navbarSearch-input {
+  color: #9cafc3;
+  background-color: transparent;
 }
 
 .navbar__icons .navbarSearch-bar__input #navbarSearch-icon,
@@ -141,6 +165,10 @@
   margin-top: 2.9%;
 }
 
+body.darkMode .navlinks__list {
+  background-color: #222326;
+}
+
 .navlinks__list__link {
   line-height: 3.75rem;
   position: relative;
@@ -148,6 +176,10 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   color: #ffffff;
+}
+
+body.darkMode .navlinks__list__link {
+  color: white;
 }
 
 .navlinks__list__link .borders-actives {
@@ -296,11 +328,19 @@
   margin-top: 0;
 }
 
+body.darkMode .search-bar__input {
+  border: 1px solid #fff;
+}
+
 .search-bar__input #search-input {
   padding: 0 2%;
   width: 100%;
   border: none;
   outline: none;
+}
+
+body.darkMode .search-bar__input #search-input {
+  background-color: transparent;
 }
 
 .search-bar__input #search-icon,
@@ -315,6 +355,10 @@
 .search-bar__suggestion {
   margin: 0 auto;
   padding: 0 5%;
+}
+
+body.darkMode .search-bar__suggestion {
+  border: 1px solid #fff;
 }
 
 .search-bar__suggestion__border {
@@ -402,6 +446,10 @@
   padding: 3.8% 0 6.8%;
 }
 
+body.darkMode .trending-gifs {
+  background-color: #222326;
+}
+
 .trending-gifs__title {
   font-family: "Montserrat", sans-serif;
   color: #572ee5;
@@ -418,6 +466,10 @@
   text-align: center;
   line-height: 1.4375rem;
   margin: 0.6% 5.6% 2.7%;
+}
+
+body.darkMode .trending-gifs__text {
+  color: #fff;
 }
 
 .trending-gifs__text__blockText {
@@ -580,6 +632,10 @@
   margin-bottom: 2%;
 }
 
+body.darkMode .social__title {
+  color: #fff;
+}
+
 .social__icon-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -600,6 +656,10 @@
 .social .social-icon {
   margin: 5.1%;
   color: lightgrey;
+}
+
+body.darkMode .social .social-icon {
+  color: #fff;
 }
 
 /* variables */
@@ -664,35 +724,40 @@
           align-items: center;
 }
 
-.searchs__btn:hover {
+body.darkMode .searchs__btn {
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+body.darkMode .searchs__btn:hover {
   background-color: #572ee5;
   color: white;
 }
 
-.gifsContainer {
+.searchs .gifsContainer {
   position: relative;
   margin: 0.3125rem 0;
   height: 100%;
 }
 
-.gifsContainer .gif {
+.searchs .gifsContainer .gif {
   width: 12.5rem;
   height: 9.375rem;
 }
 
 @media screen and (min-width: 992px) {
-  .gifsContainer .gif {
+  .searchs .gifsContainer .gif {
     width: 21.875rem;
     height: 18.75rem;
   }
 }
 
-.gifHover {
+.searchs .gifHover {
   display: none;
 }
 
 @media screen and (min-width: 992px) {
-  .gifHover {
+  .searchs .gifHover {
     display: block;
     position: absolute;
     width: 100%;
@@ -702,12 +767,12 @@
     background-color: #572ee5;
     opacity: 0;
   }
-  .gifHover:hover {
+  .searchs .gifHover:hover {
     opacity: 0.7;
   }
 }
 
-.gifHover__icons {
+.searchs .gifHover__icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -716,7 +781,7 @@
           justify-content: flex-end;
 }
 
-.gif-icons {
+.searchs .gif-icons {
   margin: 2px;
   padding: 5px;
   height: auto;
@@ -726,17 +791,17 @@
   cursor: pointer;
 }
 
-.gif-icons:hover {
+.searchs .gif-icons:hover {
   opacity: 1;
 }
 
-.gifHover__textBox {
+.searchs .gifHover__textBox {
   position: absolute;
   bottom: 0px;
   margin-bottom: 10%;
 }
 
-.gifHover__textBox__text {
+.searchs .gifHover__textBox__text {
   padding-left: 10%;
   margin: 2px 0;
   color: white;
@@ -745,18 +810,18 @@
   font-size: 0.875rem;
 }
 
-.searchs__error {
+.searchs .searchs__error {
   text-align: center;
 }
 
-.searchs__error__text {
+.searchs .searchs__error__text {
   margin-top: 0.9375rem;
   font-family: "Roboto", sans-serif;
   font-size: 1.375rem;
   color: #50e3c2;
 }
 
-.searchs__error__icon {
+.searchs .searchs__error__icon {
   margin: 0 auto;
 }
 
@@ -1089,6 +1154,16 @@
   display: none;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  color: #572ee5;
+}
+
+body.darkMode {
+  background-color: #37383c;
+  color: #fff;
+}
+
 /* variables */
 /* btn style */
 .searchs__btn, .favourites__btn, .miGifos__btn {
@@ -1120,6 +1195,10 @@
   width: 100%;
   top: 0;
   left: 0;
+}
+
+body.darkMode .maximized-container {
+  background-color: #37383c;
 }
 
 .maximizedGifs {
@@ -1199,6 +1278,10 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+body.darkMode .maximizedGifs__icons .maxGif-icons {
+  color: #fff;
 }
 
 .maximizedGifs__icons .maxGif-icons img {
@@ -1305,9 +1388,10 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  /* body.darkMode & {
-			border: 1px solid #fff;
-		} */
+}
+
+body.darkMode .crearGif__recordingZone {
+  border: 1px solid #fff;
 }
 
 .crearGif__title {
