Arreglo bug agregar a fav en mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -911,7 +911,7 @@ body.darkMode .searchs__btn:hover {
 
 .favGifContainer {
   position: relative;
-  margin: 0.3125rem 0;
+  margin: 0.3125rem;
   height: 100%;
 }
 
