--- a/styles/partials/_favourites.scss
+++ b/styles/partials/_favourites.scss
@@ -47,7 +47,7 @@
 
 .favGifContainer {
 	position: relative;
-	margin: 0.3125rem 0;
+	margin: 0.3125rem;
 	height: 100%;
 	.gif {
 		width: 12.5rem;
